<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!-- mark favourite message -->


    <string name="api_key">AIzaSyD_mPqpv43RBl7plkEhr49a4DJdtiMOkFw</string>
    <string name="app_name">Play Trip</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">359582864595251</string>
    <string name="fb_login_protocol_scheme">fb359582864595251</string>

    <!-- Error Messages -->
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>

    <!-- AnyTextView -->
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="lorem_small_2">Lorem Ipsum is simply dummy text of the printing and types etting industry. </string>
    <string name="lorem_small">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="message_coming_soon">coming soon this feature.</string>
    <string name="gps_question">Location is turned of Do you want to enable it ?</string>
    <string name="gps_yes">Yes</string>
    <string name="gps_no">No</string>
    <string name="wifi_question">No Network found  Do you want to enable Wifi ?</string>
    <!--FONTS-->
    <string name="font_normal">Poppins-Regular.ttf</string>
    <string name="font_bold">Poppins-Bold.ttf</string>
    <string name="font_semibold">Poppins-SemiBold.ttf</string>

    <string name="connection_lost">No Internet Found</string>
    <string name="notification">Notifications</string>

    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="email_address">Email Address</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>



    <string name="samePassword">New password should be changed from previous password</string>
    <string name="conform_password_error">confirm password does not match</string>
    <string name="enter_confirm_password">Confirm Password Field cannot be Empty</string>
    <string name="confirmpasswordLength">Confirm Password cannot be less than 6 characters</string>
    <string name="register">Register</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="enter_password">Password Field cannot be Empty</string>
    <string name="passwordLength">Password cannot be less than 6 characters</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_agree">I agree ....</string>
    <string name="enter_fullname">Enter Full Name</string>
    <string name="confirm_password_error">Confirm Password did not match</string>
    <string name="email_send_to_your_acount">email send to your acount</string>
    <string name="forget_password">Forget password</string>
    <string name="email">Email</string>

   <!-- home screen Strings-->
    <string name="top_list_name">Top list name</string>
    <string name="middle_list_name">Middle list name</string>
    <string name="last_list_name">last list name</string>
    <string name="view_more">View More</string>
    <string name="hottest_places">Hottest Places</string>
    <string name="videos">Videos</string>
    <string name="followed">Followed</string>
    <string name="following">Following</string>
    <string name="settings">Settings</string>

    <!-- make video screen Strings-->
    <string name="mv_photo">Photo</string>
    <string name="mv_title">Title</string>
    <string name="mv_sub_title">xyz</string>
    <string name="mv_captions">Caption</string>
    <string name="mv_driving">Driving</string>
    <string name="mv_delete">Delete</string>
    <string name="mv_publish">Publish</string>

    <!-- Book mark screen Strings-->
    <string name="book_mark_item_heading" >happy london trip</string>
    <string name="book_mark_item_date" >12/11/2019</string>

    <!-- Detail Video S Long screen Strings-->
    <string name="tb_short" >Short Videos</string>
    <string name="tb_long" >Long Videos</string>
    <string name="tb_most_views" >Most Views</string>
    <string name="tb_most_recent" >Most Recent</string>
    <string name="tb_most_show" >Most Shows</string>
    <string name="tb_most_likes" >Most Likes</string>
    <string name="new_assword">New assword</string>
    <string name="reset">Reset</string>
    <string name="search">Search</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="change_password">Change password</string>

    <string-array name="spinner_home">
        <item>Most view</item>
        <item>Most Recent</item>
        <item>Most Shows</item>
        <item>Most Likes</item>
    </string-array>




>>>>>>> e36b2b73404535ef784a784ba6cf0d5350bedf57

</resources>