<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/bg"

    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="@dimen/x24"
            android:paddingRight="@dimen/x24"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <ImageView
                android:layout_width="@dimen/x128"
                android:src="@drawable/s1_logo"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/x64"
                android:layout_height="@dimen/x128">



            </ImageView>
            <EditText
                android:id="@+id/edt_old_password"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_white_bg"
                android:layout_height="@dimen/x40"
                android:hint="@string/old_password"
                android:paddingLeft="@dimen/x8"
                android:paddingRight="@dimen/x8"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:layout_marginTop="@dimen/x100">

            </EditText>

            <EditText
                android:id="@+id/edt_new_password"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_white_bg"
                android:layout_height="@dimen/x40"
                android:hint="@string/new_assword"
                android:paddingLeft="@dimen/x8"
                android:paddingRight="@dimen/x8"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:layout_marginTop="@dimen/x16">

            </EditText>
            <EditText
                android:id="@+id/edt_confirpassword"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_white_bg"
                android:layout_height="@dimen/x40"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:paddingLeft="@dimen/x8"
                android:paddingRight="@dimen/x8"
                android:maxLines="1"
                android:layout_marginTop="@dimen/x16">

            </EditText>

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x40"
                android:background="@drawable/rounded_dark_feroz_bg_"
                android:paddingLeft="@dimen/x8"
                android:textColor="@color/white"
                android:text="@string/reset"
                android:paddingRight="@dimen/x8"
                android:maxLines="1"
                android:layout_marginTop="@dimen/x100"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>