<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/light_gray"

    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"

            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <ImageView
                android:layout_width="@dimen/x128"
                android:src="@drawable/s3_img"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/x64"
                android:layout_height="@dimen/x128">

            </ImageView>
            <TextView
                android:layout_width="@dimen/x64"
                android:layout_gravity="center"
                android:text="Becky"
                android:editable="false"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/x12"
                android:layout_height="wrap_content">



            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Profile change"
                android:textStyle="bold"
                android:editable="false"

                android:paddingLeft="@dimen/x8"
                android:paddingRight="@dimen/x8"
                android:maxLines="1"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/x100">

            </TextView>

            <TextView
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:background="@drawable/stroke_grey_bg"
                android:layout_height="@dimen/x48"
                android:text="@string/change_password"
                android:paddingLeft="@dimen/x8"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/x8"
                android:maxLines="1"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/x4">

            </TextView>

            <TextView
                android:id="@+id/btnTermsCond"
                android:layout_width="match_parent"
                android:background="@drawable/stroke_grey_bg"
                android:layout_height="@dimen/x48"
                android:text="@string/terms_and_conditions"
                android:paddingLeft="@dimen/x8"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:paddingRight="@dimen/x8"
                android:maxLines="1"

                >

            </TextView>
            <TextView
                android:id="@+id/btnPrivacyPolicy"
                android:layout_width="match_parent"
                android:background="@drawable/stroke_grey_bg"
                android:layout_height="@dimen/x48"
                android:text="@string/privacy_policy"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/x8"
                android:paddingRight="@dimen/x8"
                android:maxLines="1"
                android:textColor="@color/black"
                >

            </TextView>

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x40"
                android:layout_marginStart="@dimen/x24"
                android:layout_marginEnd="@dimen/x24"
                android:background="@drawable/rounded_dark_feroz_bg_"
                android:paddingLeft="@dimen/x8"
                android:textColor="@color/white"
                android:text="@string/logout"
                android:paddingRight="@dimen/x8"
                android:maxLines="1"
                android:layout_marginTop="@dimen/x100"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>