<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <android.support.design.widget.CoordinatorLayout
        android:layout_above="@+id/ll_bottom"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"

        tools:context=".activities.MainActivity">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="center_vertical|start|left"
                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleGravity="top|start|left"
                app:expandedTitleMarginStart="76dp"
                app:expandedTitleMarginTop="15dp"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <include layout="@layout/layout_header"/>

                    <FrameLayout
                        android:id="@+id/frame_layout_ivBannerImage"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/x300"
                        android:layout_marginLeft="@dimen/x16"
                        android:layout_marginTop="@dimen/x16"
                        android:layout_marginRight="@dimen/x16"
                        android:background="@color/white">

                        <ImageView
                            android:id="@+id/iv_photo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@null"
                            android:scaleType="fitXY"
                            android:src="@drawable/s3_banner" />

                        <TextView
                            android:id="@+id/tv_uploadPic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|right"
                            android:layout_marginRight="@dimen/x16"
                            android:layout_marginBottom="@dimen/x16"
                            android:contentDescription="@null"
                            android:text="@string/mv_photo"
                            android:textColor="@color/white"
                            android:textSize="@dimen/x16"
                            android:textStyle="bold"

                            />


                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/x40"
                        android:layout_marginLeft="@dimen/x16"
                        android:layout_marginRight="@dimen/x16"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight=".3"
                            android:gravity="center_vertical"
                            android:text="@string/mv_title"
                            android:textStyle="bold">

                        </TextView>

                        <EditText
                            android:id="@+id/et_title"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/x4"
                            android:layout_weight=".7"
                            android:background="@color/white"
                            android:maxLines="1"

                            android:paddingLeft="@dimen/x8"
                            android:paddingRight="@dimen/x8"
                            android:text="Becky"
                            android:textColor="@color/dark_grey"
                            android:textStyle="bold">

                        </EditText>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/x1"
                        android:layout_marginLeft="@dimen/x16"
                        android:layout_marginRight="@dimen/x16"
                        android:background="@color/dark_grey">

                    </View>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/x40"
                        android:layout_marginLeft="@dimen/x16"
                        android:layout_marginRight="@dimen/x16"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight=".3"
                            android:gravity="center_vertical"
                            android:text="@string/mv_sub_title"
                            android:textStyle="bold">

                        </TextView>

                        <EditText
                            android:id="@+id/et_subTitle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/x4"
                            android:layout_weight=".7"
                            android:background="@color/white"
                            android:maxLines="1"

                            android:paddingLeft="@dimen/x8"
                            android:paddingRight="@dimen/x8"
                            android:text="Becky"
                            android:textColor="@color/dark_grey"
                            android:textStyle="bold">

                        </EditText>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/x1"
                        android:layout_marginLeft="@dimen/x16"
                        android:layout_marginRight="@dimen/x16"
                        android:background="@color/dark_grey">

                    </View>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/x40"
                        android:layout_marginLeft="@dimen/x16"
                        android:layout_marginRight="@dimen/x16"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight=".3"
                            android:gravity="center_vertical"
                            android:text="@string/mv_captions"
                            android:textStyle="bold">
                        </TextView>

                        <EditText
                            android:id="@+id/et_caption"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/x4"
                            android:layout_weight=".7"
                            android:background="@color/white"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/x8"
                            android:paddingRight="@dimen/x8"
                            android:text="Becky"
                            android:textColor="@color/dark_grey"
                            android:textStyle="bold">

                        </EditText>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/x1"
                        android:layout_marginLeft="@dimen/x16"
                        android:layout_marginRight="@dimen/x16"
                        android:background="@color/dark_grey">

                    </View>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/x40"
                        android:layout_marginLeft="@dimen/x16"
                        android:layout_marginRight="@dimen/x16"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight=".3"
                            android:gravity="center_vertical"
                            android:text="@string/mv_driving"
                            android:textStyle="bold">

                        </TextView>

                        <Switch
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/x4"
                            android:layout_weight=".7"
                            android:buttonTint="@color/app_green"
                            android:paddingLeft="@dimen/x8"
                            android:paddingRight="@dimen/x8"
                            android:thumbTint="@color/app_green">

                        </Switch>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/x1"
                        android:layout_marginLeft="@dimen/x16"
                        android:layout_marginRight="@dimen/x16"
                        android:background="@color/dark_grey">

                    </View>

                </LinearLayout>

            </android.support.design.widget.CollapsingToolbarLayout>


        </android.support.design.widget.AppBarLayout>


        <com.app.playtrip.ui.views.CustomRecyclerView
            android:id="@+id/recyclerView"
            android:layout_marginLeft="@dimen/x52"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    </android.support.design.widget.CoordinatorLayout>
    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/bottom_sheet_behavior"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="@dimen/x48">
            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_margin="@dimen/x4"
                android:layout_weight="1"
                android:text="@string/mv_delete"
                android:background="@drawable/rounded_yellow_bg"
                android:layout_height="wrap_content"
                >

            </Button>
            <Button
                android:id="@+id/btn_publish"
                android:layout_width="0dp"
                android:layout_margin="@dimen/x4"
                android:layout_weight="1"
                android:text="@string/mv_publish"
                android:background="@drawable/rounded_yellow_bg"
                android:layout_height="wrap_content"
                >

            </Button>
        </LinearLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/x48"
            android:layout_gravity="center"
            android:src="@drawable/s5_v"
            android:layout_marginTop="@dimen/x4"
            android:layout_height="@dimen/x48">

        </de.hdodenhof.circleimageview.CircleImageView>



    </LinearLayout>



</RelativeLayout>